--- a/.gitignore
+++ b/.gitignore
@@ -9,18 +9,18 @@ cat >> .gitignore << 'EOL'
 
 # SvelteKit
 /.svelte-kit
+/build
 /package
 
 # Misc
 .DS_Store
 *.pem
+.env
+.vercel
 
 # Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Ya existentes
-.vercel
-.env
 EOL
+node_modules
